fixed bug on the songs page make it 1 column on mobile

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -483,6 +483,13 @@ footer {
 }
 
 @media screen and (max-width: 575px) {
+  .songs-container {
+    -webkit-columns: 1;
+            columns: 1;
+  }
+}
+
+@media screen and (max-width: 575px) {
   h2 {
     font-size: 1.5rem;
   }
